--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Mellow/vendor/spdlog"]
 	path = Mellow/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Mellow/vendor/glfw"]
+	path = Mellow/vendor/glfw
+	url = https://github.com/SandyFalafel/glfw
