--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/gabime/spdlog
 [submodule "Mellow/vendor/GLFW"]
 	path = Mellow/vendor/GLFW
-	url = https://github.com/SandyFalafel/glfw
+	url = https://github.com/SandyFalafel/glfw.git
