--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Mellow/vendor/GLFW"]
 	path = Mellow/vendor/GLFW
 	url = https://www.github.com/SandyFalafel/glfw.git
+[submodule "Mellow/vendor/glm"]
+	path = Mellow/vendor/glm
+	url = https://github.com/g-truc/glm.git
